# tonic-raft

./: Cargo.toml  README.md  build.rs
examples/: build.rs
examples/self_contained_cluster/: README.md  main.rs
examples/simple_client/: main.rs
examples/simple_server/: README.md  main.rs
proto/example/: simple.proto
proto/raft/: consensus.proto
src/: consensus.rs  entry_appender.rs  lib.rs  log.rs  mod.rs  server.rs
src/consensus/: cluster_member.rs  mod.rs  role.rs
src/consensus/module/: consensus.rs  mod.rs  new.rs
src/raft/: consensus.rs  log.rs
